fix: remove "A Java agent has been loaded dynamically" warning in tests